# cortex-sdk

./: .gitignore  ARCHITECTURE_AUDIT.md  ARCHITECTURE_IMPLEMENTATION_AUDIT.md  Dockerfile  INTEGRATION_COMPLETE.md  LICENSE  MANIFEST.in  README.md  TEST_RESULTS_SUMMARY.md  cortex_config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Chat_bot/: ANSWER_CACHING.md  API_CONTROLS_GUIDE.md  CLEAR_MEMORY_INDICATORS.md  MEMORY_INDICATORS_GUIDE.md  README.md  SEMANTIC_SEARCH_BEHAVIOR.md  SMART_SEMANTIC_SEARCH.md  download_model.py  requirements.txt  setup.py  start_chatbot.py  test_chatbot_cortex.py
Chat_bot/app/: cortex_config.yaml  simple_app.py
Chat_bot/app/templates/: index.html
Chat_bot/rag_model/src_gpt/: cortex_chat.py  interactive_chat.py
chroma_db/: chroma.sqlite3
cortex/: __init__.py
cortex/api/: __init__.py  config.py  memory.py
cortex/backends/: base_backend.py  chroma_backend.py  in_memory_backend.py
cortex/cli/: __init__.py  cortex_cli.py
cortex/config/: yaml_config.py
cortex/core/: __init__.py  embedding_engine.py  file_store.py  forget_engine.py  long_term_store.py  memory_manager.py  short_term_store.py  summarizer.py  yaml_memory_manager.py
cortex/plugins/: __init__.py  local_memory_plugin.py  pgvector_plugin.py  sqlite_plugin.py
cortex/utils/: __init__.py  logger.py  schema.py
docs/: ADVANCED_DATABASE_ANALYSIS.md  CONFIGURABLE_BACKEND_SYSTEM.md  DATABASE_RECOMMENDATION_SUMMARY.md  DATABASE_RESEARCH.md  EMERGING_DATABASE_OPTIONS.md  PACKAGING_AND_RELEASE_GUIDE.md  User_interaction.drawio  YAML_CONFIGURATION_API.md  YAML_CONFIGURATION_SUMMARY.md
examples/: chat_memory_example.ipynb  configurable_memory_example.py  summarization_example.py
tests/: conftest.py  test_forget.py  test_memory.py  test_recall.py
