[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-sdk"
version = "0.1.0"
description = "Intelligent Memory Management SDK for AI Applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Cortex SDK Team", email = "cortex@example.com"}
]
keywords = ["ai", "memory", "vector", "database", "semantic", "search", "cortex", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client>=1.0.0"]
lance = ["lance>=0.1.0"]
weaviate = ["weaviate-client>=3.0.0"]
all = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.0.0",
    "lance>=0.1.0",
    "weaviate-client>=3.0.0",
]

[project.scripts]
cortex-cli = "cortex_cli:main"

[project.urls]
Homepage = "https://github.com/your-org/cortex-sdk"
Documentation = "https://cortex-sdk.readthedocs.io/"
Repository = "https://github.com/your-org/cortex-sdk"
"Bug Tracker" = "https://github.com/your-org/cortex-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]
exclude = ["Chat_bot*", "docs*", "tests*"]

[tool.setuptools.package-data]
cortex = ["config/*.json", "backends/*.py"]

[tool.setuptools.exclude-package-data]
"" = ["Chat_bot/*", "docs/*", "tests/*"]